corrected html on index.html

--- a/Index.html
+++ b/Index.html
@@ -34,17 +34,17 @@
       <div class="javascript">
         <h2>JavaScript and jQuery</h2>
         <ul>
-          <li><a href="javascript">JavaScript (js) arithmetic</a></li>
-          <li><a href="variables"></a>JS variables</li>
-          <li><a href="methods"></a>JS methods</li>
-          <li><a href="strings"></a>JS strings</li>
-          <li><a href="functions"></a>JS functions</li>
-          <li><a href="jquery"></a>jQuery</li>
-          <li><a href="dom"></a>DOM manipulation and traversal</li>
-          <li><a href="forms"></a>Forms</li>
-          <li><a href="branching"></a>Branching</li>
-          <li><a href="arrays"></a>Arrays</li>
-          <li><a href="looping"></a>Looping</li>
+          <li><a href="javascript.html">JavaScript (js) arithmetic</a></li>
+          <li><a href="variables.html">JS variables</a></li>
+          <li><a href="methods.html">JS methods</a></li>
+          <li><a href="strings.html">JS strings</a></li>
+          <li><a href="functions.html">JS functions</a></li>
+          <li><a href="jquery.html">jQuery</a></li>
+          <li><a href="dom.html">DOM manipulation and traversal</a></li>
+          <li><a href="forms.html">Forms</a></li>
+          <li><a href="branching.html">Branching</a></li>
+          <li><a href="arrays.html">Arrays</a></li>
+          <li><a href="looping.html">Looping</a></li>
         </ul>
 
       </div>
