--- a/Index.html
+++ b/Index.html
@@ -16,17 +16,17 @@
       <div class="html">
         <h2>HTML and CSS</h2>
         <ul>
-          <li><a href="markdown.html">Markdown</a></li>
-          <li><a href="block.html">Block Elements</a></li>
-          <li><a href="inline.html">Inline Elements</a></li>
-          <li><a href="css.html">CSS</a></li>
-          <li><a href="bootstap.html">Bootstrap</a></li>
-          <li><a href="divs.html">Divs and Spans</a></li>
-          <li><a href="floats.html">Floats</a></li>
-          <li><a href="boxmodel.html">Box Model</a></li>
-          <li><a href="cascading.html">Cascading Styles</a></li>
-          <li><a href="grid.html">Grid System</a></li>
-          <li><a href="responsive.html">Responsive Design</a></li>
+          <li><a href="pages/markdown.html">Markdown</a></li>
+          <li><a href="pages/block.html">Block Elements</a></li>
+          <li><a href="pages/inline.html">Inline Elements</a></li>
+          <li><a href="pages/css.html">CSS</a></li>
+          <li><a href="pages/bootstap.html">Bootstrap</a></li>
+          <li><a href="pages/divs.html">Divs and Spans</a></li>
+          <li><a href="pages/floats.html">Floats</a></li>
+          <li><a href="pages/boxmodel.html">Box Model</a></li>
+          <li><a href="pages/cascading.html">Cascading Styles</a></li>
+          <li><a href="pages/grid.html">Grid System</a></li>
+          <li><a href="pages/responsive.html">Responsive Design</a></li>
         </ul>
 
 
@@ -34,17 +34,17 @@
       <div class="javascript">
         <h2>JavaScript and jQuery</h2>
         <ul>
-          <li><a href="javascript.html">JavaScript (js) arithmetic</a></li>
-          <li><a href="variables.html">JS variables</a></li>
-          <li><a href="methods.html">JS methods</a></li>
-          <li><a href="strings.html">JS strings</a></li>
-          <li><a href="functions.html">JS functions</a></li>
-          <li><a href="jquery.html">jQuery</a></li>
-          <li><a href="dom.html">DOM manipulation and traversal</a></li>
-          <li><a href="forms.html">Forms</a></li>
-          <li><a href="branching.html">Branching</a></li>
-          <li><a href="arrays.html">Arrays</a></li>
-          <li><a href="looping.html">Looping</a></li>
+          <li><a href="pages/javascript.html">JavaScript (js) arithmetic</a></li>
+          <li><a href="pages/variables.html">JS variables</a></li>
+          <li><a href="pages/methods.html">JS methods</a></li>
+          <li><a href="pages/strings.html">JS strings</a></li>
+          <li><a href="pages/functions.html">JS functions</a></li>
+          <li><a href="pages/jquery.html">jQuery</a></li>
+          <li><a href="pages/dom.html">DOM manipulation and traversal</a></li>
+          <li><a href="pages/forms.html">Forms</a></li>
+          <li><a href="pages/branching.html">Branching</a></li>
+          <li><a href="pages/arrays.html">Arrays</a></li>
+          <li><a href="pages/looping.html">Looping</a></li>
         </ul>
 
       </div>
