--- a/pages/dom.html
+++ b/pages/dom.html
@@ -11,6 +11,11 @@
   <body>
 
     <div class="container">
+
+      <ul class="nav nav-pills">
+        <li role="presentation" class="active"><a href="../index.html">Home</a></li>
+      </ul>
+
       <div class="jumbotron">
         <h1>DOM Manipulation and Traversal</h1>
       </div>
