--- a/pages/javascript-arithmetic.html
+++ b/pages/javascript-arithmetic.html
@@ -10,6 +10,11 @@
   </head>
   <body>
     <div class="container">
+      
+      <ul class="nav nav-pills">
+        <li role="presentation" class="active"><a href="../index.html">Home</a></li>
+      </ul>
+
       <div class="jumbotron">
         <h1>JavaScript Arithmetic</h1>
       </div>
