add correct jQuery code to fix scope issue with looping.html not being able to find get_radio_value() function

--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
           <li><a href="pages/inline.html">Inline Elements</a></li>
           <li><a href="pages/css.html">CSS</a></li>
           <li><a href="pages/bootstap.html">Bootstrap</a></li>
-          <li><a href="pages/divs.html">Divs and Spans</a></li>
+          <li><a href="pages/div.html">Divs and Spans</a></li>
           <li><a href="pages/floats.html">Floats</a></li>
           <li><a href="pages/boxmodel.html">Box Model</a></li>
           <li><a href="pages/cascading.html">Cascading Styles</a></li>
