--- a/pages/looping.html
+++ b/pages/looping.html
@@ -46,33 +46,15 @@
                   <p></p>
                   <input type="submit" onclick="get_radio_value()">
                   <!-- <button type="submit" id="submit" class="btn btn-default">Submit</button> -->
-
                 </form>
-
-                <script type="text/javascript">
-                  function get_radio_value()
-                  {
-                  for (var i=0; i < document.orderform.music.length; i++)
-                     {
-                     if (document.orderform.music[i].checked)
-                        {
-                        var rad_val = document.orderform.music[i].value;
-                        alert(rad_val);
-                        }
-                     }
-                  }
-                </script>
-              </div>
-            </div>
+              </div>  <!-- end panel-body div -->
+            </div> <!-- end panel div -->
           </div>
           <div class="col-sm-6">
-
+          <!-- DISPLAY JAVASCRIPT CODE TO THE RIGHT OF 'LET'S PLAY WITH LOOPS' EXAMPLE -->
           </div>
         </div>
       </div>
-
-
-
     </div> <!-- end container div -->
   </body>
 </html>
