add exponent operator to javascript-arithmetic.html

--- a/pages/javascript-arithmetic.html
+++ b/pages/javascript-arithmetic.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container">
-      
+
       <ul class="nav nav-pills">
         <li role="presentation" class="active"><a href="../index.html">Home</a></li>
       </ul>
@@ -29,7 +29,7 @@
             *  Multiplication:  this will multiply numbers together.
             /  Division:        this will divide one number from another.
             %  Modulo:          this will divide one number from another and return the remainder of the division.
-            ^  Exponent:        this will raise a number to the power specified.
+            ^  Exponent:        this will raise a number (left-hand operand) to the power specified (right-hand operand).
           </pre>
         </div> <!-- end col-sm-12 div -->
       </div> <!-- end row div -->
@@ -47,6 +47,7 @@
               <option>*</option>
               <option>/</option>
               <option>%</option>
+              <option>^</option>
             </select>
             <div class="form-group">
               <label class="sr-only" for="input2">Enter a number</label>
