tightened up formatting of radio button group in panel on looping.html

--- a/pages/looping.html
+++ b/pages/looping.html
@@ -36,7 +36,7 @@
               </div>
               <div class="panel-body">
                 <form name="orderform" id="genre">
-                  <h4>Select your favorite, but don't tell us! We'll use our psychic looping abilities to guess your answer!</h4><br>
+                  <h4>Select your favorite, but don't tell us! We'll use our psychic looping abilities to guess your answer!</h4>
                   <input type="radio" name="music" value="Rock"
                   checked="checked"> Rock<br>
                   <input type="radio" name="music" value="Reggae"> Reggae<br>
